# video2markdown

./: .env.example  .gitignore  .skill-set  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  check_setup.py  pyproject.toml  run_batch.sh  run_transcribe.sh  setup.sh  test_document_v3.py  whisper-cpp
docs/: ARCHITECTURE.md  MIGRATION.md  Requirements.md  WORKFLOW.md  WORKFLOW_V2.md  WORKFLOW_V3.md  whisper-cpp-setup.md
docs/test-reports/2026-02-19/: 01-测试环境准备.md  02-测试结果汇总.md  03-问题清单.md  04-API超时问题修复.md  05-配置命名更新.md  README.md
prompts/: README.md  document_generation.md  document_merge.md  image_analysis.md  text_cleaning.md  transcript_optimization.md
scripts/: batch_test.py  batch_test.sh  uv-install.sh  uv-run.sh  uv-test.sh
src/video2markdown/: __init__.py  __main__.py  asr.py  audio.py  cli.py  cli_v3.py  config.py  document.py  document_v3.py  models.py  processor.py  progress.py  prompts.py  stage1_analyze.py  stage2_transcribe.py  stage3_keyframes.py  stage4_filter.py  stage5_analyze_images.py  stage6_generate.py  stage7_render.py  stats.py  video.py  vision.py
testbench/: STAGE_TEST_CHECKLIST.md
testdata/: README.md
tests/: README.md  __init__.py  conftest.py  test_asr.py  test_audio.py  test_config.py  test_document.py  test_video.py  test_vision.py
tests/fixtures/: sample_segments.json  sample_video_info.json
tests/integration/: test_video_pipeline.py
tests/unit/: test_models.py  test_prompt_loader.py
tools/md2pdf/: README.md  md2pdf.py  requirements.txt
tools/whisper-cpp/: whisper-cli  whisper-cli-wrapper
tools/whisper-cpp/lib/: libggml-base.so.0  libggml-cpu.so.0  libggml.so.0  libwhisper.so.1
